2011-12-11  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt: Slightly modified.

2011-12-10  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistConfig.tcl: A few corrections related to the header
	* scripts/tablelistUtil.tcl:   label colors in Tablelist_tile.

2011-12-10  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl:   Removed the "-labelbackground" option
	* scripts/tablelistConfig.tcl: from Tablelist_tile.
	* scripts/tablelistThemes.tcl:
	* scripts/tablelistWidget.tcl:

	* scripts/tablelistUtil.tcl: Worked around a tile bug that caused the
	  column labels in disabled state to no longer appear in the theme-
	  specific disabled foreground color.

	* CHANGES.txt:              Updated to reflect the changes.
	* doc/tablelist.html:
	* doc/tablelistThemes.html:
	* doc/tablelistWidget.html:

2011-12-04  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt: Slightly extended.

2011-12-02  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistEdit.tcl: Minor improvements.
	* doc/tablelistWidget.html:

2011-12-01  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl: Improvements for Mac OS X.

2011-11-28  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl: Bumped the version number to 5.5.
	* *.txt:

	* ../../examples/tablelist/*.tcl: Bumped the version number to 5.5;
	  better support for native look & feel, especially on Mac OS X.

	* scripts/tablelistBind.tcl:   Hidden elements are no longer excluded
	* scripts/tablelistConfig.tcl: from the selection; added the
	* scripts/tablelistEdit.tcl:   "cornerpath" and "cornerlabelpath"
	* scripts/tablelistImages.tcl: subcommands; added support for Mac OS X
	* scripts/tablelistThemes.tcl: 10.7 (Lion); improved a few binding
	* scripts/tablelistUtil.tcl:   scripts; fixed a bug related to embedded
	* scripts/tablelistWidget.tcl: windows.

	* doc/tablelist.html:       Updated the documentation.
	* doc/tablelistWidget.html:
